2003-03-31  Adam Fedor  <fedor@gnu.org>

	* Source/NSButtonCell.m, Source/NSCell.m, Source/NSMenuItem.m:
	Add GSCategories.h

2003-03-30 19:14  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSScroller.m (-trackKnob:): Wrap each iteration of the
	loop in an autorelease pool.

	* Source/NSTextView.m: Correct the name of the delegate method
	-textView:shouldChangeTextInRange:replacementString: (was missing
	the textView: part).

2003-03-30  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Source/NSMenuView.m: Reformatted to comply to coding standards

	* Source/NSMenu.m: Reformatted to comply to coding standards


2003-03-28 21:08  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTableView.m (mouseDown:): Wrap each iteration of the mouse
	tracking loop in an autorelease pool to avoid using huge amounts of
	memory if the button is held down a long time.

2003-03-28  Serg Stoyan  <stoyan@on.com.ua>

	* Source/NSMenuView.m:
	(attachSubmenuForItemAtIndex:): Documentation comment moved to 
	NSMenuView.h.
	(indexOfItemAtPoint:): ditto.
	(locationForSubmenu:): ditto.
	(trackWithEvent:): ditto.
	(setWindowFrameForAttachingToRect:): Removed "move menu to the screen"
	TODO since it is out of this method scope.
	
	* Headers/NSMenuView.m: Added documentation for almost all methods.
	Cleanup.
	
2003-03-27 23:52  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSMatrix.m (-setSelectionFrom:to:anchor:highlight:): Update
	the selection related ivars after changing the selection.

2003-03-27  Serg Stoyan  <stoyan@on.com.ua>

	* Source/NSMenuView.m:
	([NSMenuWindowTitleView createButton:]): Made imageSize an ivar and 
	removed	declaration. Made rect setting with NSMakeRect().
	([NSMenuWindowTitleView addCloseButton:]): Added button location update.
	(initWithFrame:): Title adding moved int update method.
	(setWindowFrameForAttachingToRect:): Title removing moved into update 
	method. Call update instead sizeToFit.
	
	* Source/NSMenu.m: 